<resources>
    <string name="app_name">Brand Store</string>
    <string name="title_activity_home_activity">home_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="select_your_city">Select City</string>
    <string name="failure_message">Unable to connect to server</string>
    <string name="developers">CodeNicely</string>
    <string name="login_lable">Login</string>
    <string name="veryfy_otp">Verify Otp</string>
    <string name="otp_screen_description">We have sent you a 4 digit Otp . \n Please enter the otp in the Space given below to verify your mobile.</string>
    <string name="login_description">One time Login to access all our Amazing Services!</string>
    <string name="banner_city_screen">ca-app-pub-7676088497515789/8311996957</string>
    <string name="banner_orders_screen">ca-app-pub-7676088497515789/9788730156</string>
    <string name="banner_home_screen">ca-app-pub-7676088497515789/2544664951</string>
    <string name="banner_aboutus_screen">ca-app-pub-7676088497515789/9649129359</string>
    <string name="banner_developer_screen">ca-app-pub-7676088497515789/6695662951</string>
    <string name="banner_contactus_screen">ca-app-pub-7676088497515789/2265463351</string>
    <string name="banner_shop_screen">ca-app-pub-7676088497515789/5358530552</string>
    <string name="banner_splash_sub_screen">ca-app-pub-7676088497515789/6757551759</string>
    <string name="hint_name">Shop Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="shop_hint_password">Password</string>
    <string name="hint_email">Shop Address</string>
    <string name="register_shop">Sign \t Up </string>
    <string name="edit_shop">Update Shop Details</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_images_gallery">Select Image from Gallery</string>
    <string name="city">Select City</string>
    <string name="login_as_customer">Sign In as Customer</string>
    <string name="login_as_shop">Sign In as Shop</string>
    <string name="confirm_password">Confirm password</string>
    <string name="shop_image">Add Shop Image</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_validity">Offer Validity</string>
    <string name="offer_price">Offer Price (in Rs)</string>
    <string name="offer_code">Offer Code</string>
    <string name="register_offer">Publish Offer</string>
    <string name="edit_offer">Edit Offer</string>
    <string name="location_shop">USE THIS LOCATION</string>
    <string name="google_maps_key">AIzaSyCNirAzXfz2QtXcb2HoFOMxjnIZY31yhoI</string>
    <string name="change_password_description">Enter the details to change your password</string>
    <string name="title_add_offer">Add New Offer</string>
    <string name="title_edit_offer">Edit Offer</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="customer_login">Login</string>
    <string name="shop_login">L o g i n</string>
    <string name="shop_login_new">S i g n\tU p  </string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email_id">Email id</string>
    <string name="shop_login_textview">Shop Login</string>
    <string name="shop_signup_textview">Shop Sign up </string>
    <string name="otp">Enter OTP</string>
    <string name="okay">Okay</string>
    <string name="Rs">\u20B9</string>
    <string name="title_location_permission">Location Permission Needed</string>
    <string name="ok">Ok</string>
    <string name="text_location_permission">Please provide us location permission</string>
    <string name="offers">Offers</string>
    <string name="buy_now">Register Now</string>
    <string name="shop_profile">Shop Profile</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy1">The terms \"We\" / \"Us\" / \"Our\"/”Company” individually and collectively refer to Inverno Private LTD.and the terms \"You\" /\"Your\" / \"Yourself\" refer to the users.\nThis Privacy Policy is an electronic record in the form of an electronic contract formed under the information Technology Act, 2000 and the rules made thereunder and the amended provisions pertaining to electronic documents / records in various statutes as amended by the information Technology Act, 2000. This Privacy Policy does not require any physical, electronic or digital signature. This Privacy Policy is a legally binding document between you and Inverno Private LTD. (both terms defined below). The terms of this Privacy Policy will be effective upon your acceptance of the same (directly or indirectly in electronic form, by clicking on the I accept tab or by use of the app or by other means) and will govern the relationship between you and Inverno Private LTD. for your use of the website “Brand Store” (defined below). This document is published and shall be construed in accordance with the provisions of the Information Technology (reasonable security practices and procedures and sensitive personal data of information) rules, 2011 under Information Technology Act, 2000; that require publishing of the Privacy Policy for collection, use, storage and transfer of sensitive personal data or information. Please read this Privacy Policy carefully by using the App, you indicate that you understand, agree and consent to this Privacy Policy. If you do not agree with the terms of this Privacy Policy, please do not use this App.  By providing us your Information or by making use of the facilities provided by the App, You hereby consent to the collection, storage, processing and transfer of any or all of Your Personal Information and Non-Personal Information by us as specified under this Privacy Policy. You further agree that such collection, use, storage and transfer of Your Information shall not cause any loss or wrongful gain to you or any other person.</string>
    <string name="privacy_policy2">To avail certain services on our app, users are required to provide certain information for the registration process namely: - a) your name, b) Mobile Number, c) Address, d) password etc.The Information as supplied by the users enables us to improve our sites and provide you the most user-friendly experience.  All required information is service dependent and we may use the above said user information to, maintain, protect, and improve its services (including advertising services) and for developing new services  Such information will not be considered as sensitive if it is freely available and accessible in the public domain or is furnished under the Right to Information Act, 2005 or any other law for the time being in force.</string>
    <string name="privacy_policy3">We shares the sensitive personal information to any third party without obtaining the prior consent of the user in the following limited circumstances:  (a) When it is requested or required by law or by any court or governmental agency or authority to disclose, for the purpose of verification of identity, or for the prevention, detection, investigation including cyber incidents, or for prosecution and punishment of offenses. These disclosures are made in good faith and belief that such disclosure is reasonably necessary for enforcing these Terms; for complying with the applicable laws and regulations.   (b) We proposes to share such information within its group companies and officers and employees of such group companies for the purpose of processing personal information on its behalf. We also ensure that these recipients of such information agree to process such information based on our instructions and in compliance with this Privacy Policy and any other appropriate confidentiality and security measures.</string>
    <string name="privacy_policy4">We take appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. These include internal reviews of our data collection, storage and processing practices and security measures, including appropriate encryption and physical security measures to guard against unauthorized access to systems where we store personal data.  All information gathered on our app is securely stored within our controlled database. The database is stored on servers secured behind a firewall; access to the servers is password-protected and is strictly limited. However, as effective as our security measures are, no security system is impenetrable. We cannot guarantee the security of our database, nor can we guarantee that information you supply will not be intercepted while being transmitted to us over the Internet. And, of course, any information you include in a posting to the discussion areas is available to anyone with Internet access.   However the internet is an ever evolving medium. We may change our Privacy Policy from time to time to incorporate necessary future changes. Of course, our use of any information we gather will always be consistent with the policy under which the information was collected, regardless of what the new policy may be. </string>
    <string name="privacy_policy5">Any complaints, abuse or concerns with regards to content and or comment or breach of these terms shall be immediately informed to Inverno Private LTD. as mentioned below via in writing or through email signed with the electronic signature to Inverno Private LTD .  \n\nMr. Arjun Pandey \nInverno Private LTD \n303, Shanti avenue phase 2 ,\nShri Krishna avenue phase 1 Limbodi \nindore 452001 \nEmail: arjun.pandey14@gmail.com  \nPh:  +91 8519072717\n\n</string>
    <string name="user_privacy_statement"><b>USER PRIVACY STATEMENT</b></string>
    <string name="terms_and_conditions1">The terms \"We\" / \"Us\" / \"Our\"/”Company” individually and collectively refer to Inverno Private LTD. and the terms \"Visitor” ”User” refer to the users.\nThis page states the Terms and Conditions under which you (Visitor) may visit this app (“Brand Store”). Please read this page carefully. If you do not accept the Terms and Conditions stated here, we would request you to exit this app. The business, any of its business divisions and / or its subsidiaries, associate companies or subsidiaries to subsidiaries or such other investment companies (in India or abroad) reserve their respective rights to revise these Terms and Conditions at any time by updating this posting. You should visit this page periodically to re-appraise yourself of the Terms and Conditions, because they are binding on all users of this app.</string>
    <string name="terms_and_conditions2">All logos, brands, marks headings, labels, names, signatures, numerals, shapes or any combinations thereof, appearing in this app, except as otherwise noted, are properties either owned, or used under licence, by the business and / or its associate entities who feature on this app. The use of these properties or any other content on this app, except as provided in these terms and conditions or in the app content, is strictly prohibited.\nYou may not sell or modify the content of this App  or reproduce, display, publicly perform, distribute, or otherwise use the materials in any way for any public or commercial purpose without the respective organisation’s or entity’s written permission.</string>
    <string name="description">Description</string>
</resources>