<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/color_shop_primary"

    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/title_add_offer"
        app:titleTextColor="@color/white"
        android:titleTextColor="@color/white"
        android:title="@string/title_add_offer"
        android:background="@color/color_shop_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>-->
<!--

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="8dp">
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="4"
                android:src="@drawable/ic_arrow_back_white_48dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="16"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Add Offer"
                android:textAllCaps="true"
                android:textColor="@color/white_line"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>

    <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white_line"
                    app:hintTextAppearance="@style/EditTextLayoutTheme">

                    <EditText
                        android:id="@+id/offer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/offer_name" />
                        android:textColor="@color/white_line"
                        android:textColorHint="@color/white_line"
                        android:theme="@style/EditTextTheme"
                        />
                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white_line"
                    app:hintTextAppearance="@style/EditTextLayoutTheme">

                    <EditText
                        android:id="@+id/offer_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                    android:textColor="@color/white_line"
                    android:textColorHint="@color/white_line"
                    android:theme="@style/EditTextTheme"
                    />


                </android.support.design.widget.TextInputLayout>
                <DatePicker
                    android:layout_width="match_parent"
                    android:id="@+id/offer_expiry"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:tag="Offer Validity"
                    android:layout_height="wrap_content">
                </DatePicker>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="250dp"
                    android:maxHeight="400dp"
                    android:contentDescription="@string/shop_image"
                    android:src="@drawable/brand_store_logo_white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/galleryButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="5"
                        android:background="@drawable/shop_sign_up_button"
                        android:text="@string/select_images_gallery"
                        android:textColor="@color/white_line"

                        />

                    <Button
                        android:id="@+id/cameraButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="5"
                        android:background="@drawable/shop_sign_up_button"
                        android:text="@string/take_picture"

                        android:textColor="@color/white_line" />

                </LinearLayout>

                <Button
                    android:id="@+id/registerOffer"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:background="@drawable/shop_sign_up_button"
                    android:text="@string/register_offer"
                    android:textColor="@color/white_line"

                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!--
    </android.support.v7.widget.CardView>-->
</RelativeLayout>